modules/cli/src/test/resources/good/misc/globals/gprotocoldecl/GProtocolDecl03.scr
module good.misc.globals.protocoldecl.GProtocolDecl03;


global protocol GProtocolDecl3(role A, role B, role C)
{
	1() from A to B;
	do GProtocolDecl3a(A, C);
}

global protocol GProtocolDecl3a(role D, role E)
{
	do GProtocolDecl3b(D, E);
}

global protocol GProtocolDecl3b(role D, role E)
{
	2() from D to E;
}
